<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Canora</string>
    <!-- Dialogues -->
    <string name="dialog_file_deletefrom_t1">Do you really want to delete</string>
    <string name="dialog_file_deletefrom_t2">Files from the Playlist?</string>
    <string name="dialog_file_deletefrom_title">Delete Files from Playlist</string>
    <string name="dialog_file_info_title">File Info</string>
    <string name="dialog_file_info_t1">Filepath</string>
    <string name="dialog_playlist_delete_t1">Do you really want to delete the Playlist:</string>
    <string name="dialog_playlist_delete_title">Delete Playlist</string>
    <string name="dialog_playlist_create_title">Create Playlist</string>
    <string name="dialog_playlist_edit_title">Edit Playlist</string>
    <string name="dialog_createpl_nameph">Name</string>
    <string name="dialog_settings_title">Settings</string>
    <string name="dialog_settings_t1">Internal Volume</string>
    <string name="dialog_sortby_title">Sort by</string>
    <string name="dialog_searchby_title">Search by</string>
    <string name="dialog_exit_ays">Do you really want to exit Canora?</string>

    <!-- Menus -->
    <string name="menu_listitem_select">Select</string>
    <string name="menu_listitem_info">Show Info</string>
    <string name="menu_listitem_delfrompl">Delete from Playlist</string>

    <string name="menu_options_delpl">Delete Playlist</string>
    <string name="menu_options_editpl">Edit</string>
    <string name="menu_options_search">Search</string>
    <string name="menu_options_settings">Settings</string>
    <string name="menu_options_sort">Sort</string>
    <string name="menu_options_playlists">Playlists</string>
    <string name="menu_options_addtoplaylist">Add to</string>
    <string name="menu_options_newplaylist">New Playlist</string>
    <string name="menu_options_select">Select</string>
    <string name="menu_options_selectAll">Select All</string>
    <string name="menu_options_cancelselect">Cancel Selection</string>

    <!-- Snackbars -->
    <string name="error_emptyplname">Invalid Playlist name, please enter at least 1 character</string>
    <string name="error_createempty">Please select at least one item to create Playlist</string>
    <string name="error_delfromdef">Cannot remove items from default Playlists</string>
    <string name="error_delfromempty">"Playlist must at least contain 1 item"</string>

    <!-- Misc -->
    <string name="layout_main_searchPH">Search...</string>

    <string name="controls_by">by</string>

    <string name="misc_ok">Ok</string>
    <string name="misc_back">Back</string>
    <string name="misc_yes">Yes</string>
    <string name="misc_no">No</string>
    <string name="misc_minimize">Minimize</string>
    <string name="misc_exit">Exit Canora</string>

    <string name="misc_title">Title</string>
    <string name="misc_artist">Artist</string>
    <string name="misc_both">Both</string>
    <string name="misc_unknown">Unknown</string>

    <string name="misc_tracks">Tracks</string>
    <string name="misc_albums">Albums</string>
    <string name="misc_artists">Artists</string>
    <string name="misc_genres">Genres</string>
    <string name="misc_playlists">Playlists</string>

    <string name="misc_themes">Themes</string>
    <string name="misc_equalizerpreset">Equalizer Presets</string>

    <string name="misc_allfiles">All Files</string>
    <string name="misc_init">Initialization Time</string>
    <string name="misc_founditems">Total Items Found</string>
    <string name="misc_createpl">Created Playlist</string>
    <string name="misc_addedto">Items Added to</string>
    <string name="misc_removed">Items Removed</string>
    <string name="misc_nofilesfound">No Audio Files Found on this Device</string>

    <string name="misc_delmultitle">Delete Playlists</string>
    <string name="misc_delmul1">Do you Really want to delete</string>
    <string name="misc_delmul2">Playlists?</string>

    <string name="misc_playlistexistsp1">A Playlist with the Name</string>
    <string name="misc_playlistexistsp2">Already Exists</string>

    <string name="misc_noplaylistfound">No Playlists Found</string>
    <string name="misc_notracksfound">No Tracks Found</string>
    <string name="misc_noAlbumfound">No Albums Found</string>
    <string name="misc_noArtistfound">No Artists Found</string>
    <string name="misc_nogenresfound">No Genres Found</string>

    <string name="misc_stringnotfound">not found in</string>

    <string name="settings_credits">Credits</string>

    <string name="misc_errorgeneric" tools:ignore="MissingTranslation">Error</string>
    <string name="misc_permissiondenied" tools:ignore="MissingTranslation">You denied permission to read external storage, thus Canora cannot find your awesome songs. To use the App please grant the requested permission</string>
</resources>
