<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?colorDialogBackground">
    <TextView android:id="@+id/extext"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/dialog_exit_ays"
              android:textColor="?colorDialogText"
              android:layout_centerHorizontal="true"
              android:paddingTop="10dp"
              android:paddingBottom="10dp"/>
    <LinearLayout android:id="@+id/footer"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_below="@id/extext"
                  android:background="?colorDialogBackground">
        <Button android:id="@+id/btnNeut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?colorDialogFrame"
                android:layout_marginRight="2dp"
                android:text="@string/misc_minimize"/>
        <Button android:id="@+id/btnNeg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/misc_no"
                android:background="?colorDialogFrame"
                android:layout_marginRight="2dp"/>
        <Button android:id="@+id/btnPos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/misc_yes"
                android:background="?colorDialogFrame"/>
    </LinearLayout>
</RelativeLayout>