<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
    <TextView android:id="@+id/title"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="PLACEHOLDER"
              android:textColor="?colorDialogText"
              android:textSize="22dp"
              android:background="?colorDialogFrame"
              android:paddingBottom="10dp"
              android:paddingTop="10dp"/>
    <LinearLayout android:id="@+id/plnamecont"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="?colorDialogBackground"
                  android:paddingTop="10dp"
                  android:paddingBottom="10dp">
        <EditText android:id="@+id/plname"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/dialog_createpl_nameph"
                  android:textColorHint="?colorGreyed"
                  android:textSize="20dp"
                  android:textColor="?colorDialogText"
                  android:textCursorDrawable="@null"
                  android:backgroundTint="?colorDialogText"
        />
    </LinearLayout>
    <LinearLayout android:id="@+id/footer"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_below="@id/plnamecont"
                  android:background="?colorDialogBackground">
        <Button android:id="@+id/btnNeg" android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/misc_back"
                android:background="?colorDialogFrame"
                android:layout_marginRight="2dp"/>
        <Button android:id="@+id/btnPos" android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/misc_ok"
                android:background="?colorDialogFrame"/>
    </LinearLayout>
</LinearLayout>