<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <TextView android:id="@+id/title"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="PLACEHOLDER"
              android:textColor="?colorDialogText"
              android:textSize="22dp"
              android:background="?colorDialogFrame"
              android:paddingBottom="10dp"
              android:paddingTop="10dp"/>
    <RelativeLayout android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:background="?colorDialogBackground">
        <TextView android:id="@+id/fileTitle"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerHorizontal="true"
                  android:text="@string/misc_title"
                  android:textSize="20dp"
        />
        <TextView android:id="@+id/fileTitleText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/fileTitle"
                  android:paddingTop="2dp"
                  android:paddingBottom="2dp"
                  android:gravity="center"
                  android:text="PLACEHOLDER"
                  android:textSize="15dp"
        />
        <TextView android:id="@+id/fileArtist"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerHorizontal="true"
                  android:text="@string/misc_artist"
                  android:layout_below="@id/fileTitleText"
                  android:textSize="20dp"
        />
        <TextView android:id="@+id/fileArtistText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="2dp"
                  android:paddingBottom="2dp"
                  android:gravity="center"
                  android:text="PLACEHOLDER"
                  android:textSize="15dp"
                  android:layout_below="@id/fileArtist"
        />
        <TextView android:id="@+id/filepathtitle"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerHorizontal="true"
                  android:text="@string/dialog_file_info_t1"
                  android:layout_below="@id/fileArtistText"
                  android:textSize="20dp"
        />
        <TextView android:id="@+id/filepathtext"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="2dp"
                  android:paddingBottom="2dp"
                  android:gravity="center"
                  android:text="PLACEHOLDER"
                  android:textSize="15dp"
                  android:layout_below="@id/filepathtitle"
        />
    </RelativeLayout>
    <Button android:id="@+id/okbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/misc_ok"
            android:textSize="15dp"
            android:background="?colorDialogFrame"
            android:layout_below="@id/content"/>
</LinearLayout>