<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/root"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/backgroundTexture">
    <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            android:id="@+id/toolbar_settings"
            android:layout_alignParentTop="true">
    </android.support.v7.widget.Toolbar>
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_below="@id/toolbar_settings">
        <RelativeLayout android:id="@+id/volBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?colorViewPort"
                        android:layout_marginTop="2dp">
            <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_settings_t1"
                    android:textColor="?colorDialogText"
                    android:includeFontPadding="false"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
            />
            <SeekBar
                    android:id="@+id/seekBar1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="0"
                    android:layout_below="@id/textView"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
            />
        </RelativeLayout>
        <RelativeLayout android:id="@+id/themeBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?colorViewPort"
                        android:layout_marginTop="2dp"
                        android:layout_below="@id/volBox">
            <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/misc_themes"
                    android:textColor="?colorDialogText"
                    android:includeFontPadding="false"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
            />
            <Spinner android:id="@+id/spinner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="?colorDialogText"
                     android:popupBackground="?colorDialogFrame"
                     android:layout_below="@id/textView1"
                     android:layout_centerHorizontal="true"
                     android:layout_marginBottom="20dp"
                     android:layout_marginTop="10dp"
            />
        </RelativeLayout>
        <RelativeLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?colorViewPort"
                        android:layout_below="@id/themeBox"
                        android:layout_marginTop="2dp">
            <TextView
                    android:id="@+id/TitleEqualizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/misc_equalizerpreset"
                    android:textColor="?colorDialogText"
                    android:includeFontPadding="false"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
            />
            <Spinner android:id="@+id/spinnerEqualizer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="?colorDialogText"
                     android:popupBackground="?colorDialogFrame"
                     android:layout_below="@id/TitleEqualizer"
                     android:layout_centerHorizontal="true"
                     android:layout_marginBottom="20dp"
                     android:layout_marginTop="10dp"
            />
        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/AboutSection"
                        android:layout_alignParentBottom="true">
            <RelativeLayout android:id="@+id/header_about"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="?colorViewPort">
                <TextView android:id="@+id/creditsTitle"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/settings_credits"
                          android:textSize="15dp"
                          android:gravity="center"
                          android:paddingLeft="10dp"
                          android:layout_centerVertical="true"/>
                <ImageButton android:id="@+id/arrowBtn"
                             android:layout_width="50dp"
                             android:layout_height="25dp"
                             android:src="@drawable/settings_btnopen"
                             android:background="?android:selectableItemBackgroundBorderless"
                             android:scaleType="center"
                             android:layout_alignParentRight="true"
                             android:layout_centerVertical="true">
                </ImageButton>
            </RelativeLayout>
            <RelativeLayout android:id="@+id/hideable_about"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_below="@id/header_about"
                            android:background="?colorViewPort"
                            android:layout_marginTop="2dp"
                            android:visibility="gone">
                <TextView android:id="@+id/sampleAttribution"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="-"
                          android:textColor="?colorHighlight"
                          android:layout_centerHorizontal="true"
                          android:padding="5dp"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>